frontend/tests/snapshots/snapshot_serialization_tests__node_http_call.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000002",
  "name": "Call External",
  "category": "durable",
  "icon": "call",
  "x": 300.0,
  "y": 100.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "http-call",
  "description": "Call external HTTP API",
  "config": {
    "type": "http-call",
    "url": "https://api.example.com/v1/data"
  }
}
