frontend/tests/snapshots/snapshot_serialization_tests__node_http_handler.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000001",
  "name": "API Endpoint",
  "category": "entry",
  "icon": "globe",
  "x": 100.0,
  "y": 200.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "http-handler",
  "description": "HTTP request handler",
  "config": {
    "method": "POST",
    "path": "/api/orders",
    "type": "http-handler"
  }
}
