frontend/tests/snapshots/snapshot_serialization_tests__node_kafka_handler.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000003",
  "name": "Order Events",
  "category": "entry",
  "icon": "kafka",
  "x": 50.0,
  "y": 50.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "kafka-handler",
  "description": "Kafka message handler",
  "config": {
    "topic": "orders.created",
    "type": "kafka-handler"
  }
}
