frontend/tests/snapshots/snapshot_serialization_tests__viewport.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&viewport"
---
{
  "x": -150.0,
  "y": 75.5,
  "zoom": 1.25
}
