frontend/tests/snapshots/snapshot_serialization_tests__workflow_3_nodes_2_connections.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&workflow"
---
{
  "nodes": [
    {
      "id": "00000000-0000-0000-0000-000000000001",
      "name": "HTTP Trigger",
      "category": "entry",
      "icon": "globe",
      "x": 0.0,
      "y": 0.0,
      "last_output": null,
      "selected": false,
      "executing": false,
      "skipped": false,
      "node_type": "http-handler",
      "description": "HTTP request handler",
      "config": {
        "method": "POST",
        "path": "/order",
        "type": "http-handler"
      }
    },
    {
      "id": "00000000-0000-0000-0000-000000000002",
      "name": "Process Order",
      "category": "durable",
      "icon": "play",
      "x": 250.0,
      "y": 0.0,
      "last_output": null,
      "selected": false,
      "executing": false,
      "skipped": false,
      "node_type": "run",
      "description": "Run arbitrary code",
      "config": {
        "code": "return input;",
        "durable_step_name": null,
        "mapping": null,
        "type": "run"
      }
    },
    {
      "id": "00000000-0000-0000-0000-000000000003",
      "name": "In Stock?",
      "category": "flow",
      "icon": "git-branch",
      "x": 500.0,
      "y": 0.0,
      "last_output": null,
      "selected": false,
      "executing": false,
      "skipped": false,
      "node_type": "condition",
      "description": "Conditional branch",
      "config": {
        "expression": "$.quantity > 0",
        "type": "condition"
      }
    }
  ],
  "connections": [
    {
      "id": "11111111-1111-1111-1111-111111111111",
      "source": "00000000-0000-0000-0000-000000000001",
      "target": "00000000-0000-0000-0000-000000000002",
      "source_port": "main",
      "target_port": "main"
    },
    {
      "id": "22222222-2222-2222-2222-222222222222",
      "source": "00000000-0000-0000-0000-000000000002",
      "target": "00000000-0000-0000-0000-000000000003",
      "source_port": "main",
      "target_port": "main"
    }
  ],
  "viewport": {
    "x": 0.0,
    "y": 0.0,
    "zoom": 1.0
  },
  "execution_queue": [],
  "current_step": 0,
  "history": [],
  "execution_records": []
}
