frontend/tests/snapshots/snapshot_serialization_tests__workflow_node_cron_trigger.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&WorkflowNode::CronTrigger(CronTriggerConfig\n{ schedule: Some(\"0 * * * *\".to_string()), })"
---
{
  "type": "cron-trigger",
  "schedule": "0 * * * *"
}
